# WinElement

./: .clang-tidy  .clinerules  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.cursor/rules/: winelement-dev-rule.mdc
.github/agents/: winelement.agent.md
.github/hooks/: copilot-clang-format.json
.github/workflows/: ci.yml  publish-vcpkg.yml
.opencode/: AGENTS.md
cmake/: WinElementConfig.cmake.in  winelement_target.cmake
docs/: README.md  api.md  architecture.md  design.md  framework_audit.md  performance.md  vcpkg.md
docs/direct3d/: 00-目录.md  01-什么是D3D11.md  02-Device-Context-SwapChain.md  03-画一个三角形.md  04-渲染状态.md  05-常量缓冲区.md  06-纹理与图集.md  07-模板缓冲区.md  08-延迟上下文.md  09-渲染管线全流程.md
docs/layout/: 布局引擎详解.md
docs/rendering/: 渲染引擎详解.md
include/winelement/: animation.hpp  controls.hpp  core.hpp  elements.hpp  layout.hpp  platform.hpp  rendering.hpp  style.hpp  winelement.hpp
include/winelement/animation/: easing.hpp  physics.hpp  property_animation.hpp  timeline.hpp
include/winelement/controls/: basic_controls.hpp  border.hpp  button.hpp  context_menu.hpp  control.hpp  control_animation.hpp  feedback.hpp  file_dialog.hpp  image.hpp  input.hpp  items_control.hpp  panel.hpp  path.hpp  property_keys.hpp  radio.hpp  scrollbar.hpp  select.hpp  stack_panel.hpp  switch.hpp  text.hpp  virtualization.hpp  virtualizing_panel.hpp
include/winelement/core/: binding_expression.hpp  cache.hpp  core.hpp  core_types.hpp  event.hpp  frame_scheduler.hpp  observable.hpp  property.hpp  property_keys.hpp  signal.hpp  static_dispatch.hpp  version.hpp  view_model.hpp
include/winelement/elements/: all_icons.hpp  binding.hpp  command_cache.hpp  declarative.hpp  devtools.hpp  element_descriptor.hpp  event_router.hpp  event_routing_policy.hpp  focus_manager.hpp  input_event.hpp  placement_engine.hpp  popup_manager.hpp  render_object.hpp  semantics.hpp  svg_icon.hpp  text_clipboard_service.hpp  text_edit_model.hpp  theme_manager.hpp  top_layer_manager.hpp  ui_element.hpp  uia_adapter.hpp  virtual_element.hpp
include/winelement/layout/: grid_layout.hpp  incremental_layout.hpp  layout_cache.hpp  layout_element.hpp  layout_engine.hpp  layout_engine_options.hpp  layout_types.hpp  pixel_snap.hpp
include/winelement/platform/: application.hpp  dispatcher.hpp  file_dialog.hpp  image_loader.hpp  render_thread_pool.hpp  text_services.hpp  vsync.hpp  window.hpp
include/winelement/rendering/: compositor.hpp  render_command_list.hpp  render_command_pool.hpp  render_context.hpp  render_frame_graph.hpp  render_resource_queue.hpp  render_scene.hpp  render_types.hpp  svg_path_parser.hpp  text_engine.hpp
include/winelement/style/: computed_style.hpp  element_colors.hpp  ui_element_style.hpp
packaging/vcpkg/winelement/: portfile.cmake
ports/winelement/: portfile.cmake  vcpkg.json
samples/controls_showcase/: CMakeLists.txt  main.cpp
samples/controls_showcase_mask_probe/: CMakeLists.txt  main.cpp
samples/dialog_spacing_probe/: CMakeLists.txt  main.cpp
samples/helloworld/: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg-configuration.json  vcpkg.json
samples/message_box_spacing_probe/: CMakeLists.txt  main.cpp
samples/modal_mask_probe/: CMakeLists.txt  main.cpp
samples/render_pipeline_demo/: CMakeLists.txt  main.cpp
samples/render_pipeline_perf/: CMakeLists.txt  main.cpp
scripts/: copilot-format-cpp.ps1  extract_icons.mjs  list_element_icons.mjs
src/animation/: CMakeLists.txt  easing.cpp  physics.cpp  timeline.cpp
src/controls/: CMakeLists.txt  border.cpp  button.cpp  context_menu.cpp  control.cpp  control_style.hpp  feedback.cpp  file_dialog.cpp  image.cpp  input.cpp  items_control.cpp  panel.cpp  path.cpp  popup_menu_surface.cpp  popup_menu_surface.hpp  radio.cpp  scrollbar.cpp  select.cpp  stack_panel.cpp  switch.cpp  text.cpp  virtualization.cpp  virtualizing_panel.cpp
src/core/: CMakeLists.txt  binding_expression.cpp  core.cpp  frame_scheduler.cpp  observable.cpp  property.cpp
src/elements/: CMakeLists.txt  command_cache.cpp  element_descriptor.cpp  event_router.cpp  event_routing_policy.cpp  focus_manager.cpp  placement_engine.cpp  popup_manager.cpp  semantics.cpp  svg_icon.cpp  text_edit_model.cpp  theme_manager.cpp  top_layer_manager.cpp  ui_element.cpp  ui_element_virtualization.cpp  ui_element_virtualization_state.hpp  virtual_element.cpp
src/layout/: CMakeLists.txt  grid_layout.cpp  layout_cache.cpp  layout_element.cpp  layout_engine.cpp  pixel_snap.cpp  yoga_conversions.cpp
src/layout/detail/: yoga_conversions.hpp  yoga_handles.hpp
src/platform/: CMakeLists.txt  render_thread_pool.cpp
src/platform/win32/: application.cpp  d3d11_composition_surface.cpp  d3d11_composition_surface.hpp  d3d11_display_list_ps.hpp  d3d11_display_list_renderer.cpp  d3d11_display_list_renderer.hpp  d3d11_display_list_shader.hlsl  d3d11_display_list_vs.hpp  d3d11_render_device.cpp  d3d11_render_device.hpp  d3d11_render_resource_cache.cpp  d3d11_render_resource_cache.hpp  direct_composition_bridge.cpp  direct_composition_bridge.hpp  dispatcher.cpp  dispatcher_internal.hpp  dx_composition_surface.cpp  dx_composition_surface.hpp  dx_render_device.cpp  dx_render_device.hpp  dx_render_resource_cache.cpp  dx_render_resource_cache.hpp  file_dialog.cpp  hresult_error.hpp  image_loader.cpp  window.cpp  window_render_worker.cpp  window_render_worker.hpp
src/rendering/: CMakeLists.txt  compositor.cpp  render_command_list.cpp  render_context.cpp  render_frame_graph.cpp  render_resource_queue.cpp  render_scene.cpp  svg_path_parser.cpp  text_engine.cpp
src/style/: CMakeLists.txt  computed_style.cpp  ui_element_style.cpp
tests/: CMakeLists.txt
tests/animation/: animation_tests.cpp
tests/controls/: basic_controls_tests.cpp
tests/core/: core_tests.cpp
tests/elements/: ui_element_tests.cpp
tests/platform/: deferred_context_tests.cpp  visual_regression_tests.cpp  window_tests.cpp
tests/rendering/: render_context_tests.cpp
tests/style/: style_tests.cpp
versions/: baseline.json
versions/w-/: winelement.json
